# auctiondeal

./: CLAUDE.md  README.md  auctiondeal_prd.md  plan.md
.claude/tasks/: auctiondeal_implementation_plan.md  move-collector-tests.md
auctiondeal-app/: docker-compose.dev.yml  package-lock.json  package.json  vercel.json
auctiondeal-app/scripts/: historical-backfill.ts  test-backfill-completeness.ts  test-comprehensive-integration.ts  test-db-connection.ts
auctiondeal-app/src/types/: index.ts
context/: SB01-0000004345.xml  SB01-0000004347.xml  initial.md  prd_template.md
docs/: api_specification.md  architecture_diagrams.md  auctiondeal_architecture.md  auctiondeal_decisions.md  auctiondeal_prd.md  auctiondeal_prd1.md  domain_model_interfaces.md  implementation_plan.md  project_index.md  shab-api-interface.md  system_design_overview.md
docs/archive/: auctiondeal_prd.md  marktstudie.md
libs/contracts/: .gitignore  package-lock.json  package.json  tsconfig.json
libs/contracts/schemas/: auction-object.schema.json  auction.schema.json  shab-publication.schema.json
libs/contracts/scripts/: generate.sh
libs/shared-py/: pyproject.toml
libs/shared-py/auctiondeal_shared/: __init__.py  db.py  telemetry.py  validation.py
libs/shared-ts/: package-lock.json  package.json
libs/shared-ts/prisma/: schema.prisma
libs/shared-ts/src/: db.ts  index.ts  telemetry.ts  validation.ts
services/collector-node/: .env  .env.test  jest.config.mjs  package-lock.json  package.json  tsconfig.json
services/collector-node/scripts/: db-clear.ts  (+4 more)
services/webapp/: package.json
(+25 files in other folders)
